Updated the Nonfunctional requirements seciton to be more clear about how testing was performed

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -247,7 +247,8 @@ Some example questions included: \\
 \noindent As for the non-user tests, user tests were preformed in order to measure metrics based on the application performance.
 Ratings given were on a 5 point scale.
 
-\noindent The summary of the test cases are displayed below:
+\noindent The summary of the test cases are displayed below.\\
+Each test includes the outcome of our user testing and a unique identifier connecting these results to the tests outlined in the VnV Plan.\\
 
 \subsection{Look and Feel Testing}
 \begin{enumerate}
