--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -33,23 +33,36 @@
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
 March 8 2023 & 1.0 & Initial draft\\
+April 5 2023 & 2.0 & Final draft\\
 \bottomrule
 \end{tabularx}
 
 ~\newpage
 
-%\section{Symbols, Abbreviations and Acronyms}
-%
-%\renewcommand{\arraystretch}{1.2}
-%\begin{tabular}{l l} 
-%  \toprule		
-%  \textbf{symbol} & \textbf{description}\\
-%  \midrule 
-%  T & Test\\
-%  \bottomrule
-%\end{tabular}\\
+\section{Reference Material}
 
-%\wss{symbols, abbreviations or acronyms -- you can reference the SRS tables if needed}
+This section records information for easy reference.
+
+\subsection{Abbreviations and Acronyms}
+
+\renewcommand{\arraystretch}{1.2}
+\begin{tabular}{l l} 
+	\toprule		
+	\textbf{symbol} & \textbf{description}\\
+	\midrule 
+	AC & Anticipated Change\\
+	iOS & \href{https://en.wikipedia.org/wiki/IOS}{Apple's proprietary operating system} \\
+	M & Module \\
+	MG & Module Guide \\
+	MIS & Module Interface Specification \\
+	OS & Operating System \\
+	R & Requirement\\
+	RPE & \href{https://en.wikipedia.org/wiki/Rating_of_perceived_exertion}{Rating of Perceived Exertion} \\
+	SRS & Software Requirements Specification\\
+	\progname & The Capstone course this project belongs to \\
+	UC & Unlikely Change \\
+	\bottomrule
+\end{tabular}\\
 
 \newpage
 
@@ -61,6 +74,17 @@ March 8 2023 & 1.0 & Initial draft\\
 
 \pagenumbering{arabic}
 
+\subsection{Relevant Documentation}
+
+\begin{enumerate}
+	\item \href{https://github.com/dimitritsampiras/olympian/blob/main/docs/VnVPlan/VnVPlan.pdf}{VnV Plan
+	\item \href{https://github.com/dimitritsampiras/olympian/blob/main/docs/SRS/SRS.pdf}{SRS} 
+	\item \href{https://github.com/dimitritsampiras/olympian/blob/main/docs/Design/MG/MG.pdf}{MG} 
+	\item \href{https://github.com/dimitritsampiras/olympian/blob/main/docs/Design/MIS/MIS.pdf}{MIS} 
+} 
+	
+\end{enumerate}
+
 This document serves to record the results of testing and validation performed on the Olympian system, as well as any design decisions or changes made due to the results of said testing.
 
 \section{User Testing Summary}
@@ -68,13 +92,13 @@ Unless Specified these tests were performed with a semi-structured interview whe
 Examples include:
 \begin{enumerate}
 	\item Creating an Account.
-	\item Logging into an account.
+	\item Logging into an Account.
 	\item Creating a Program.
 	\item Creating a Workout.
 	\item Creating an Exercise.
 	\item Searching for an Exercise.
-	\item Using the Discovery page to browse workouts and programs.
-	\item Starting a workout (as if the user were to use the application during their workout).
+	\item Using the Discovery page to browse Workouts and Programs.
+	\item Starting a Workout (as if the user were to use the application during their Workout).
 \end{enumerate}
 
 See the raw user test results in the appendix.
@@ -100,7 +124,7 @@ Some example actions included: \\
 \begin{enumerate}
    
 \subsubsection{Workout Routine Tests}
-    \item{\textbf{test-WR-1}}:A Workout Routine can be created.\\
+    \item{\textbf{test-WR-1}}: A Workout Routine can be created.\\
     Input: User inputs required data for a workout routine.
 	
     Expected Output: A workout routine is stored in the database and is accessible to the user that created it. If the user determined that the workout to be public then it should be publicly visible.
@@ -115,21 +139,21 @@ Some example actions included: \\
     \textbf{Test result}: Workout routines can be edited, including changing the names, tags, and amending and removing exercises. [Passed]
    
 \subsubsection{Exercise Tests}
-    \item{\textbf{test-EX-1}}:Adding an Exercise to a Workout Routine.\\
+    \item{\textbf{test-EX-1}}: Adding an Exercise to a Workout Routine.\\
     Input: A user created exercise with the parameters required for the exercise.
 
     Expected Output: The workout routine should include the added exercise.
     
     \textbf{Test result}: Users can add Exercises to Workout Routines and customize reps and sets. [Passed]
    
-    \item{\textbf{test-EX-2}}:Removing an Exercise from a Workout Routine.\\
+    \item{\textbf{test-EX-2}}: Removing an Exercise from a Workout Routine.\\
     Input: The user chooses to remove an exercise.
 	
     Expected Output: Some feedback indicating that an exercise has been removed. The workout routine no longer contains the removed exercise.
     
     \textbf{Test result}: Users can remove exercises from Workout Routines. [Passed]
    
-    \item{\textbf{test-EX-3}}:Limiting Exercises to a Workout Routine.\\
+    \item{\textbf{test-EX-3}}: Limiting Exercises to a Workout Routine.\\
     Input: The number of exercises required to reach the limit of exercises per workout routine. 
 	
     Expected Output: A notification to the user, before the limiting exercise notifying them of the limit, and preventing them from adding another exercise.
@@ -137,21 +161,21 @@ Some example actions included: \\
     \textbf{Test result}: Users cannot limit exercises to workout routines. [Failed]
    
 \subsubsection{Quantifier Tests}
-    \item{\textbf{test-QT-1}}:Adding Quantifiers to an Exercise.\\
+    \item{\textbf{test-QT-1}}: Adding Quantifiers to an Exercise.\\
     Input: A number and unit of measurement describing an exercise.
 	
     Expected Output: The exercise now holds the given quantifier and is displayed to the user.
     
     \textbf{Test result}: Users can add quantifiers to their exercises. [Passed]
    
-    \item{\textbf{test-QT-2}}:Removing Quantifiers from an Exercise.\\
+    \item{\textbf{test-QT-2}}: Removing Quantifiers from an Exercise.\\
     Input: Removal of a quantifier.
 	
     Expected Output: The exercise no longer holds a quantifier and is not displayed to the user.
     
     \textbf{Test result}: Users cannot remove their quantifiers from their exercises. [Failed]
    
-    \item{\textbf{test-QT-3}}:Editing Quantifiers of an Exercise.\\
+    \item{\textbf{test-QT-3}}: Editing Quantifiers of an Exercise.\\
     Input: A number and unit of measurement describing an exercise.
 
     Expected Output: The exercise now holds the updated quantifier.
@@ -159,14 +183,14 @@ Some example actions included: \\
     \textbf{Test result}: Users can edit their quantifiers. [Passed]
    
 \subsubsection{Publicity Tests}
-    \item{\textbf{test-PB-1}}:Publicizing a Workout Routine.\\
+    \item{\textbf{test-PB-1}}: Publicizing a Workout Routine.\\
     Input: An edit or addition to a workout routine to make it public.
 	
     Expected Output: The workout routine is declared public in the database and is now visible to all users.
     
     \textbf{Test result}: Users can publicize a workout routine. [Passed]
    
-    \item{\textbf{test-PB-2}}:Privatizing a Workout Routine.\\
+    \item{\textbf{test-PB-2}}: Privatizing a Workout Routine.\\
     Input: An edit or addition to a workout routine to make is private.
 	
     Expected Output: The workout routine is declared private in the database and is no longer visible to any user except the creator.
@@ -174,7 +198,7 @@ Some example actions included: \\
     \textbf{Test result}: Users can privatize a workout routine. [Passed]
    
 \subsubsection{Workout Routine Saving Tests}
-    \item{\textbf{test-WS-1}}:Saving a Public Workout Routine.\\
+    \item{\textbf{test-WS-1}}: Saving a Public Workout Routine.\\
     Input: The other user workout routine is saved.
 	
     Expected Output: The workout routine is now visible and accessible under the saved workout routines.
@@ -182,14 +206,14 @@ Some example actions included: \\
     \textbf{Test result}: Users can save a public workout routine. [Passed]
    
 \subsubsection{Browsing Workout Routine Tests}
-    \item{\textbf{test-BS-1}}:Browsing Workout Routines.\\
+    \item{\textbf{test-BS-1}}: Browsing Workout Routines.\\
     Input: navigation movements to view the public workout routines.
 	
     Expected Output: Multiple public workout routines should be displayed.
      
     \textbf{Test result}: Users can browse public programs according to specific categories. [Passed]
    
-    \item{\textbf{test-BS-2}}:Search Workout Routines.\\
+    \item{\textbf{test-BS-2}}: Search Workout Routines.\\
     Input: Search string inputs to view the public workout routines.
 	
     Expected Output: Public workout routines that match the search criteria should be displayed. 
@@ -197,14 +221,14 @@ Some example actions included: \\
     \textbf{Test result}: Users can search publicly published routines using custom search text. [Passed]
    
 \subsubsection{User Profile Tests}
-    \item{\textbf{test-UP-1}}:Creating a User Profile.\\
+    \item{\textbf{test-UP-1}}: Creating a User Profile.\\
     Input: The required parameters for creating a profile.
 	
     Expected Output: The created profile is stored in a user database and the user should be logged into their profile.
     
     \textbf{Test result}: Users can create their profiles when signing up. [Passed]
    
-    \item{\textbf{test-UP-2}}:Viewing Other User Profile.\\
+    \item{\textbf{test-UP-2}}: Viewing Other User Profile.\\
     Input: Search criteria for the searched user profile.
 	
     Expected Output: A user profile is displayed with their public routines, fitness goals, and other public profile data.
@@ -212,14 +236,14 @@ Some example actions included: \\
     \textbf{Test result}: Users cannot view other user profiles. [Failed]
    
 \subsubsection{Fitness Goal Tests}
-    \item{\textbf{test-FG-1}}:Creating a Fitness Goal.\\
+    \item{\textbf{test-FG-1}}: Creating a Fitness Goal.\\
     Input: Progress points towards a given fitness goal at a given date.
 	
     Expected Output: The progress displayed towards a fitness goal should be visually updated and numerically updated in the database with a date
     
     \textbf{Test result}: Users cannot create a fitness goal. [Failed]
    
-    \item{\textbf{test-FG-2}}:Progressing a Fitness Goal.\\
+    \item{\textbf{test-FG-2}}: Progressing a Fitness Goal.\\
     Input: Progress points towards a given fitness goal at a given date.
 	
     Expected Output: The progress displayed towards a fitness goal should be visually updated and numerically updated in the database with a date
@@ -432,6 +456,9 @@ Ratings given were on a 5 point scale.
 
 \section{Changes Due to Testing}
 Listed below are some of the changes that are planned (some implemented) as a result of the testing and user testing.
+
+\subsection{Plan for failed tests}
+
 \subsection{Timer}
 During user testing one of the most desired additions to this application was a built in timer that would help for rest period and counting during workout sets. This addition makes sense as it helps users keep track of their timings without having the close the application to open up a timer. 
 \subsection{Auto Login}
